[gd_scene load_steps=3 format=3 uid="uid://o1lhvlrw2act"]

[ext_resource type="Script" path="res://Scenes/Player/gun.gd" id="1_dpr8y"]
[ext_resource type="Texture2D" uid="uid://fi8fh5uxdm6m" path="res://Graphics/gun.png" id="3_phak3"]

[node name="Gun" type="Node2D"]
script = ExtResource("1_dpr8y")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_phak3")

[node name="FiringPoint" type="Marker2D" parent="."]
position = Vector2(4, 0)

[node name="ShotCooldownTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="ShotCooldownTimer" to="." method="_on_shot_cooldown_timer_timeout"]
